[package]
name = "yet_another_dungeon_crawler"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = { git = "https://github.com/amethyst/bracket-lib.git" }
legion = { version = "0.4.0", default-features = false, features = [
    "wasm-bindgen",
    "codegen",
] }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.80"
